--- a/conda/environments/rapids_triton_dev.yml
+++ b/conda/environments/rapids_triton_dev.yml
@@ -4,8 +4,6 @@ channels:
   - conda-forge
 dependencies:
   - ccache
-  - cmake>=3.23.1,!=3.25.0
-  - libstdcxx-ng<=11.2.0
-  - libgcc-ng<=11.2.0
+  - cmake>=4.0
   - ninja
   - rapidjson>=1.1.0,<1.1.0.post*
